#228: Integration test for DriverManager